home/static/home/css/page.css
.background {
    height: 50vh;
    background-size: cover;
    background-position: top center;
    background-repeat: no-repeat;
    background-attachment: scroll;
}

.pagetitle, .pagedesc {
    color: var(--pen2);
    text-align: center;
    font-size: 40px;
    letter-spacing: 5px;
    text-transform: uppercase;
    text-decoration: underline;
    position: relative;
    top: 35%;
    background-size: contain;
    background-position: center;
    background-repeat: no-repeat;
    width: 80%;
    margin-left: auto;
    margin-right: auto;
}

.pagedesc {
    letter-spacing: normal;
    text-transform: none;
    text-decoration: none;
    font-size: 20px;
    color: var(--pen3);
}

.page-content {
    padding-left: 5%;
    padding-right: 5%;
    font-size: 20px;
    padding-top: 20px;
    padding-bottom: 20px;
    color: var(--pen3);
}

